--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@ document.querySelectorAll(".bell").forEach(b=>{
     };
 });
 const wishes = [
-    "🎄 Chúc bạn một mùa Giáng Sinh an lành<br>✨ Tràn đầy niềm vui & hạnh phúc ✨",
-    "🎁 Merry Christmas!<br>❄️ Mong mọi điều tốt đẹp sẽ đến với bạn ❄️",
+    "🎄 Chúc eim một mùa Giáng Sinh an lành<br>✨ Tràn đầy niềm vui & hạnh phúc ✨",
+    "🎁 Merry Christmas!<br>❄️ Mong mọi điều tốt đẹp sẽ đến với emm ❄️",
     "🎅 Giáng Sinh ấm áp<br>❤️ Bên gia đình & những người thân yêu ❤️",
-    "🌟 Chúc bạn Noel vui vẻ<br>🎶 Bình an – Hạnh phúc – Thành công 🎶",
+    "🌟 Chúc em Noel vui vẻ<br>🎶 Bình an – Hạnh phúc – Thành công 🎶",
     "🎄 Noel này<br>✨ Cười nhiều hơn – Buồn ít hơn – Yêu nhiều hơn ✨",
-    "🎁 Chúc bạn một Giáng Sinh<br>💖 Ngập tràn yêu thương & phép màu 💖"
+    "🎁 Chúc e một Giáng Sinh<br>💖 Ngập tràn yêu thương & phép màu 💖"
 ];
 /* ============== MESSAGE ============== */
 let lastIndex = -1;
@@ -303,3 +303,4 @@ function closeMessage(){
 
 </body>
 </html>
+
